# carm-data-models

./: .gitignore  README.md  pyproject.toml
src/carm_data_models/: __init__.py  common.py  company.py  email.py  requests.py  responses.py  tool.py  user.py
tests/: test_common_requests_responses.py  test_company_models.py  test_email_models.py
